AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = 	conf.py \
		aiengine_internal_architecture.png \
		databaseintegration.rst  \
		realtimeprograming.rst \
		zeusmalware.rst \
                binaryextractinformation.rst \
		ddosruby.rst \
		aiengine.rst \
		malwareanalisys1.rst \
		virtualcloudmalwaredetection.rst \
		randomwalware.rst \
		performance.rst \
		metasploit.rst \
		multicoresystems.rst

MAINTAINERCLEANFILES = Makefile.in 

