AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = 	4udppackets.pcap sslflow.pcap \
		accessgoogle.pcap mpls_icmp_tcp.pcap \
		flow_vlan_x11.pcap flow_vlan_netbios.pcap \
		two_http_flows.pcap ipv6_tcp_stream.pcap \
		generic_exploit_ipv6_defcon20.pcap \
		polymorphic_clet32bits_port1986.pcap \
		two_http_flows_noending.pcap http_flow.pcap \
		tor_4flows.pcap gprs_icmp.pcap \
		amazon_4ssl_flows.pcap \
		ipv6_google_dns.pcap ipv6_ah.pcap \
		ipv6_dhcp6.pcap \
		icq.pcapng vxlan_ftp.pcap gre_ssh.pcap \
		openflow.pcap http_over_ipv6.pcap \
		smtp.pcap ssdp_flow.pcap \
		ipv4_coap.pcap ipv4_mqtt.pcap ipv4_coap_big_uri.pcap \
		gprs_sip_flow.pcap ipv6_mix_traffic.pcap \
		pop_flow.pcap imap_flow.pcap \
		modbus_five_flows.pcap \
	       	gre_dhcp.pcap \
		gprs_ftp.pcap \
		bitcoin_flow.pcap \
		pppoe_tcp.pcap \
		openflow_dns.pcap \
		smtp_starttls.pcap smtp_flow.pcap \
		imap_starttls.pcap pop3_starttls.pcap \
		dcerpc_traffic.pcapng \
		smb_flow.pcap \
		gprs_ip6_tcp.pcap gprs_ip6_udp.pcap gtp_ip6_dns.pcap \
		gtp_ip6_ssl.pcap

MAINTAINERCLEANFILES = Makefile.in 

